- Fixed rendering of Email and Url field when the value is empty. - Fixed CSS so order arrows are visible again.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@440 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -187,16 +187,16 @@ th a, th a:link, th a:visited { color: #c0c0c0; }
 
 thead td a:hover, th a:hover { color: #fff; }
 
-thead a.asc, thead a.desc {
+table a.asc, table a.desc {
     float: left;
     width: 100%;
     background-position: right center;
     background-repeat: no-repeat;
 }
 
-thead a.asc { background-image: url(images/up.png); }
+table a.asc { background-image: url(images/up.png); }
 
-thead a.desc { background-image: url(images/down.png); }
+table a.desc { background-image: url(images/down.png); }
 
 tr.altrow td { background-color: #f6f6f6; }
 
